# llm_mud

./: .gitignore  MUD游戏项目开发文档.md
backend/: Cargo.toml
backend/src/: ai.rs  api.rs  config.rs  game.rs  main.rs  storage.rs
backend/src/world/: item.rs  mod.rs  npc.rs  region.rs  room.rs  task.rs
design/: extensibility-flexibility.md  loading-saving-mechanism.md  world-builder-design.md  world-framework-design.md
frontend/: config-editor.html  drag-test.html  index.html  node-editor.html  package.json  test.html  world-builder.html
