[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.4", features = ["fs"] }
